--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port=8081",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -14,6 +14,7 @@
     "echarts": "^4.5.0",
     "element-ui": "^2.4.5",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
