--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "core-js": "^3.3.2",
     "echarts": "^4.5.0",
     "element-ui": "^2.4.5",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
+    "mavon-editor": "^2.7.7",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.10",
