--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.3.2",
     "echarts": "^4.5.0",
     "element-ui": "^2.4.5",
+    "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
@@ -22,7 +23,8 @@
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7",
-    "vue-table-with-tree-grid": "^0.2.4"
+    "vue-table-with-tree-grid": "^0.2.4",
+    "xlsx": "^0.15.4"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
