--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mavon-editor": "^2.7.7",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
+    "quill": "^1.3.7",
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7",
