--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "element-ui": "^2.4.5",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
+    "iview": "^3.5.4",
     "jspdf": "^1.5.3",
     "lodash": "^4.17.15",
     "mavon-editor": "^2.7.7",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "quill": "^1.3.7",
+    "tinymce": "^5.1.6",
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7",
