--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "quill": "^1.3.7",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "tinymce": "^5.1.6",
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
@@ -43,6 +45,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "quill-image-extend-module": "^1.1.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-element": "^1.0.1",
