--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --port=8081",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build --port=8081"
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.0.1",
