--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --port=8081"
+    "build": "vue-cli-service build --port=8081",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@tinymce/tinymce-vue": "^3.0.1",
@@ -24,6 +25,7 @@
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
     "tinymce": "^5.1.6",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.10",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.7",
