--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "quill": "^1.3.7",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
+    "sortablejs": "^1.10.2",
     "tinymce": "^5.1.6",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.10",
