[修改] 管控端調整

--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "node-sass": "^4.13.1",
     "quill-image-extend-module": "^1.1.2",
+    "sass-loader": "^8.0.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-element": "^1.0.1",
