--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.1",
     "quill-image-extend-module": "^1.1.2",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
