[新增] 環境切換設置

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --port=8081",
+    "build-test": "vue-cli-service build --port=8081 --mode test",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
