--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,8 @@
 # 本地環境
-VUE_APP_ENV=http://test.btcbox.tw:8081
+VUE_APP_ENV=ENV
 
 # 實際線上網址，測試環境留空即可
-VUE_APP_SITE_URL=
+VUE_APP_SITE_URL=http://test.btcbox.tw:8081
 
 # TWD 版本
 VUE_APP_TWD_URL=http://192.168.50.156:7777
