--- a/.env.test
+++ b/.env.test
@@ -5,10 +5,12 @@ VUE_APP_ENV=ENV
 VUE_APP_SITE_URL=http://test.btcbox.tw:8081
 
 # TWD 版本
-VUE_APP_TWD_URL=http://192.168.50.156:7777
-VUE_APP_TWD_API_http://192.168.50.156:7777
+VUE_APP_TWD_URL=//test.btcbox.tw:8081
+VUE_APP_TWD_API_URL=//test.btcbox.tw:8081
 
 # 後端 API url
 VUE_APP_BE_API_URL=http://192.168.50.156:7777
 VUE_APP_BE_HASH_KEY=33743677397A24432646294A404D6351
+
+
 
