--- a/resource/.env
+++ b/resource/.env
@@ -1,11 +1,11 @@
 # 預設 env 檔 （等同正式）
 VUE_APP_ENV=ENV
-VUE_APP_SITE_URL=https://btcbox.com.tw:8081
+VUE_APP_SITE_URL=http://127.0.0.1
 
 # TWD 版本
-VUE_APP_TWD_URL=//btcbox.com.tw:7777
-VUE_APP_TWD_API_URL=//btcbox.com.tw:7777
+VUE_APP_TWD_URL=//127.0.0.1
+VUE_APP_TWD_API_URL=//127.0.0.1
 
 # 後端 API url
-VUE_APP_BE_API_URL=//btcbox.com.tw:7777
+VUE_APP_BE_API_URL=//127.0.0.1
 VUE_APP_BE_HASH_KEY=33743677397A24432646294A404D6351
